# Automatisierter-Finanzbericht

./: .commit-de-prueba.txt  .gitattributes  .gitignore  README.md  crear-acceso-directo.bat  iniciar.bat  justfile  setup.bat
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: agentes.py  auth.py  finance.py  informes.py  merge.py  operaciones.py  procesos.py  proveedores.py  reporteador.py  reports.py  retencion.py  sharepoint.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: session.py
backend/app/models/: agente_config.py  operacion.py  proceso.py  report.py  retencion_config.py  sharepoint_config.py  user.py
backend/app/repositories/: operacion_repository.py  proceso_repository.py  report_repository.py  user_repository.py
backend/app/resources/: plantilla.xlsx
backend/app/schemas/: agente.py  auth.py  operacion.py  proceso.py  report.py  retencion.py  sharepoint.py
backend/app/services/: agente_config_service.py  auth_service.py  clasificacion_service.py  detalle_export.py  excel_service.py  excel_utils.py  merge_service.py  operacion_service.py  proceso_service.py  proveedores_service.py  report_service.py  reporteador_service.py  retencion_config_service.py  sharepoint.py  sharepoint_config_service.py
backend/tests/: conftest.py  test_auth.py  test_clasificacion.py  test_merge.py  test_operaciones.py  test_procesos.py  test_proveedores.py  test_reporteador.py  test_reports.py  test_sharepoint.py
(+32 files in other folders)
