[project]
name = "finanzbericht-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi",
    "openpyxl",
    "pydantic",
    "pydantic-settings",
    "pyjwt>=2.13.0",
    "python-multipart",
    "sqlalchemy",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]
