[project]
name = "finanzbericht-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi",
    "openpyxl",
    "pandas>=3.0.3",
    "pydantic",
    "pydantic-settings",
    "pyjwt>=2.13.0",
    "python-multipart",
    "sqlalchemy",
    "uvicorn[standard]",
    "xlrd>=2.0.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]
